opam-version: "2.0"
synopsis: "ANSI escape sequence parser"
description: """
This package provides a basic ANSI escape parser,
allowing the OCurrent web UI to show logs in colour."""
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/ansi"
bug-reports: "https://github.com/ocurrent/ansi/issues"
dev-repo: "git+https://github.com/ocurrent/ansi.git"
doc: "https://ocurrent.github.io/ansi/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.10.0"}
  "astring"
  "fmt" {>= "0.8.7"}
  "tyxml"
  "dune" {>= "2.0"}
]
